--- a/NuptialLogAndroid/app/src/main/res/values/dimens.xml
+++ b/NuptialLogAndroid/app/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="default_margin">16dp</dimen>
     <dimen name="ant_user_spacing">4dp</dimen>
     <dimen name="small_margin">4dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
