--- a/NuptialLogAndroid/app/src/main/res/values/dimens.xml
+++ b/NuptialLogAndroid/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="wide_margin">32dp</dimen>
 </resources>
