--- a/NuptialLogAndroid/app/src/main/res/layout/activity_main.xml
+++ b/NuptialLogAndroid/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
                 />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/add_flight_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/fab_margin"
